Add markup, add form partial

--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -1,9 +1,19 @@
-%p Brief Explanation
 
-%p Form
+%section
+	%h1 Wrecked.io
 
-%p Future
+%section
+	%nav
+		%ul
+			%li
+				= link_to 'About'
+			%li
+				= link_to 'Contribute'
 
+%main
+	%section
+		%h1 About
 
-
-
+	%section
+		%h1 Contribute
+		%button{:type => 'submit'} Get the Form
