--- a/source/layouts/layout.haml
+++ b/source/layouts/layout.haml
@@ -32,7 +32,16 @@
       -# Page content gets rendered here
       = yield
 
-      %footer
+    %footer
+      %nav
+        %ul
+          %li
+            = link_to 'About'
+          %li
+            = link_to 'Contribute'
+      %section
+        %p About the Author, Picture of me
+        %img
 
     = javascript_include_tag "//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"
     :javascript
