--- a/source/stylesheets/grid/_fixed.sass
+++ b/source/stylesheets/grid/_fixed.sass
@@ -45,3 +45,5 @@ header, #main-content, footer
 .moreinfo
   @include span-columns(3 omega, 12)
 
+//Makes border-box properties
+@include border-box-sizing;
