Add styles. Squashed commit of the following:
commit 7d580bbdddcc3af76e42842f2fc8dfda34366d12
Author: fmbo <contactfmb@gmail.com>
Date:   Sat Nov 22 23:03:27 2014 -0500

    Add additional styles

commit ddb280921f914f010a858f5d35be99041168a540
Author: fmbo <contactfmb@gmail.com>
Date:   Sat Nov 22 22:58:16 2014 -0500

    Add additional styles, reduce complexity of susy

commit 4c7df772c62b41602e431722770835d3db9e0aa1
Author: fmbo <contactfmb@gmail.com>
Date:   Sat Nov 22 15:29:09 2014 -0500

    Add variables to sheet, add additional styles

--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -1,9 +1,20 @@
-%p Brief Explanation
 
-%p Form
+.top-bar.container
+	%section.logo
+		%h1 Wrecked.io
 
-%p Future
+	%nav.nav
+		%ul
+			%li
+				= link_to 'About'
+			%li
+				= link_to 'Contribute'
 
-
-
-
+.container{:'data-swap-container' => '' }
+	%section
+		%h1 About
+		%p At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga. Et harum quidem rerum facilis est et expedita distinctio.
+	%section
+		%h1 Contribute
+		%p At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga. Et harum quidem rerum facilis est et expedita distinctio.
+		%button{:type => 'submit'} Get the Form
