--- a/source/stylesheets/vars.sass
+++ b/source/stylesheets/vars.sass
@@ -1,5 +1,16 @@
 //Colors
-$orange : #c9521f
+$green				: #4CA454
+$green-light 	: #abdcae
+$green-dark		: #4ca452
+
+$blue 				: #3b7b7e
+$blue-light		: #94bdbf
+$blue-dark		: #0B494B
+
+$yellow 			: #9EC25A
+$grey					: #eeeeee
 
 //Functional Colors
-$primary-background : $orange
+
+$background-top 		: $green-light
+$background-footer	: $grey
