--- a/source/stylesheets/vars.sass
+++ b/source/stylesheets/vars.sass
@@ -1,16 +1,1 @@
-//Colors
-$green				: #4CA454
-$green-light 	: #abdcae
-$green-dark		: #4ca452
-
-$blue 				: #3b7b7e
-$blue-light		: #94bdbf
-$blue-dark		: #0B494B
-
-$yellow 			: #9EC25A
-$grey					: #eeeeee
-
-//Functional Colors
-
-$background-top 		: $green-light
-$background-footer	: $grey
+$medium-breakpoint			:  720px
