--- a/source/stylesheets/screen.css.sass
+++ b/source/stylesheets/screen.css.sass
@@ -27,7 +27,7 @@
 //Top Navigation
 
 html
-	background: #5cc1af
+	background-color: #5cc1af
 
 header
 	display: none
@@ -47,7 +47,7 @@ main
 
 .inner-content
 	text-align: center
-	.content
+	.bubble
 		width: 85%
 		min-width: 300px
 		padding: 0px 50px
@@ -55,6 +55,36 @@ main
 		border: 2px solid #FFFFFF
 		border-radius: 10px
 
+.survey
+	text-align: left
+	text-transform: uppercase
+	.pair
+		padding: 20px
+		label
+			width: 300px
+			display: block
+			float: left
+		input
+			padding: 5px 10px
+			@media screen and (min-width: 720px)
+				padding: 5px 50px
+
+//Example of a component
+.button
+	margin-bottom: 15px
+	padding: 30px
+	background: none
+	color: white
+	text-transform: uppercase
+	font-size: 1.5em
+	border: 2px solid white
+	border-radius: 15px
+	&:hover
+		background: rgba(255, 255, 255, 0.3)
+	&:active
+		background: rgba(255, 255, 255, 0.8)
 
 
-.footer
+.button-small
+	@extend .button
+	padding: 10px
