--- a/source/layouts/layout.haml
+++ b/source/layouts/layout.haml
@@ -21,6 +21,7 @@
 
     = stylesheet_link_tag "screen"
     = javascript_include_tag "libs/modernizr-2.7.1.min"
+    = stylesheet_link_tag "http://fonts.googleapis.com/css?family=Montserrat:400,700)"
 
   %body{:class => current_page.data.bodyclass}
     /[if lt IE 8]
@@ -36,16 +37,7 @@
 
       -# = partial :form
 
-    %footer.footer.container
-      %nav
-        %ul
-          %li
-            = link_to 'About'
-          %li
-            = link_to 'Contribute'
-      %section
-        %p About the Author, Picture of me
-        %img
+    %footer
 
     = javascript_include_tag "//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"
     :javascript
