--- a/source/stylesheets/screen.css.sass
+++ b/source/stylesheets/screen.css.sass
@@ -26,20 +26,64 @@
 @import "vars"
 //Top Navigation
 
+html
+	background-color: #5cc1af
+
+header
+	display: none
+
+body
+	font-family: 'Montserrat', sans-serif
+	color: #FFFFFF
+
 main
-	@include container(1140px)
+	h1
+		margin: 0
+		text-indent: -9999px
 
-.top-bar
-	@include clearfix
-	background: orange
-	.logo
-		@include span-columns(4)
-	.nav
-		@include span-columns(8 omega)
+.top-button
+	display: none
 
-.container
-	
+.inner-content
 	text-align: center
+	.bubble
+		width: 85%
+		min-width: 300px
+		padding: 0px 50px
+		display: inline-block
+		border: 2px solid #FFFFFF
+		border-radius: 10px
 
-.footer
-	background: silver
+.survey
+	text-align: left
+	text-transform: uppercase
+	.pair
+		padding: 20px
+		label
+			width: 300px
+			display: block
+			float: left
+		input
+			padding: 5px 10px
+			@media screen and (min-width: 720px)
+				padding: 5px 50px
+
+//Example of a component
+.button
+	margin-bottom: 15px
+	padding: 30px
+	background: none
+	color: white
+	text-transform: uppercase
+	font-size: 1.5em
+	border: 2px solid white
+	border-radius: 15px
+	&:hover
+		background: rgba(255, 255, 255, 0.3)
+	&:active
+		background: rgba(255, 255, 255, 0.8)
+
+
+.button-small
+	@extend .button
+	padding: 10px
